--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ notifications:
     recipients:
       - gm130s@gmail.com
 env:
-  - ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu ROSINSTALL_FILENAME=".rosinstall_ci" UPSTREAM_WORKSPACE="file"
+  - ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    PKGS_DOWNSTREAM=tensorflow_ros_test NOT_TEST_INSTALL=true
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .industrial_ci
 script:
