[CI] Add a cmake arg to search pip version of TensorFlow.
CI failed. From [here](https://travis-ci.com/tradr-project/tensorflow_ros/builds/76227335#L586),

> -- - Not searching for Tensorflow installed by pip since the system uses C++11 ABI. Set `FORCE_TF_PIP_SEARCH` to force the search.

Looking at [CMakeLists.txt](https://github.com/tradr-project/tensorflow_ros/blob/205d1faad65dcef79dd9cbd09d9619466dd2995d/CMakeLists.txt#L7), setting `FORCE_TF_PIP_SEARCH` hopefully solves this.

Nice warning BTW!

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ notifications:
 env:
   - ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
     PKGS_DOWNSTREAM=tensorflow_ros_test NOT_TEST_INSTALL=true
+    CATKIN_CONFIG='-FORCE_TF_PIP_SEARCH'
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .industrial_ci
 script:
